syntax="proto3";
package documentRepository;
option go_package="./;documentRepository";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Document {
  bytes document_id = 1;
  string url = 2;
  string title = 3;
  string content = 4;
  uint64 page_rank = 5;
  google.protobuf.Timestamp indexed_at = 6;
}

message SearchQuery {
  Type type = 1;
  string expression = 2;

  enum Type {
    MATCH = 0;
    PHRASE = 1;
  }
}

message SearchResult {
    repeated Document doc = 1;
}

message SetPageRankScoreRequest {
  bytes document_id = 1;
  double page_rank_score = 2;
}

message PageRankScore {
  double page_rank_score = 1;
}

message DocumentID {
  bytes document_id = 1;
}

service DocumentRepository {
  rpc Index(Document) returns (google.protobuf.Empty);
  rpc Search(SearchQuery) returns (SearchResult);
  rpc SetPageRankScore(SetPageRankScoreRequest) returns (google.protobuf.Empty);
  rpc FindByID(DocumentID) returns (Document);
}
